# AutoOps

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
docs/: index.md
examples/: sample_event.json
src/autoops/: __init__.py  __main__.py  ai_client.py  cli.py  config.py  server.py  webhook.py
src/autoops/github/: github_api.py  logs_downloader.py
src/autoops/utils/: fileops.py  logger.py
